# gpt2

./: .gitignore  README.md  model.py  pyproject.toml  testing.py  train.py  yourGPT.ipynb
